--- a/michaelw/css/michaelw.webflow.css
+++ b/michaelw/css/michaelw.webflow.css
@@ -355,7 +355,7 @@
   bottom: 0px;
   z-index: 2;
   display: block;
-  overflow: scroll;
+  overflow: hidden;
   height: 100%;
   clear: none;
   background-color: #000;
